# tele-cli

./: .gitignore  AGENTS.md  README.md  main.py  package.json  pyproject.toml
.zed/: debug.json  settings.json
openclaw-telecli-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
openclaw-telecli-plugin/src/: accounts.ts  channel.ts  config-schema.ts  monitor.ts  rpc.ts  runtime.ts  send.ts
skills/telegram-cli/: SKILL.md
src/tele_cli/: app.py  config.py  constant.py  session.py  shared.py
src/tele_cli/cli/: __init__.py  __main__.py  auth.py  types.py
src/tele_cli/types/: __init__.py  config.py  error.py  output.py  session.py  tl.py
src/tele_cli/utils/: __init__.py  fmt.py  output.py
